--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jun 07 18:04:03 CST 2017
-ndk.dir=C\:\\Users\\liyunzhi\\AppData\\Local\\Android\\Sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\liyunzhi\\AppData\\Local\\Android\\Sdk
+#Sun Jun 18 07:24:39 CST 2017
+sdk.dir=C\:\\Users\\JAMES\\AppData\\Local\\Android\\Sdk
